# libpedalog

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README  buildpkg  libpedalog.so.0.1.0  libpedalog.so.1
debian/: changelog  control  copyright  libpedalog-dev.install  libpedalog0.install
src/: pedalog.c  pedalog.h
udev/rules/: 40-pedalog.rules
